--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "core-js": "^3.6.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.1",
     "react": "^16.12.0",
